--- a/files/style.css
+++ b/files/style.css
@@ -5,8 +5,8 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root{
-    --theme-color:#D4C4EC;
-    --theme-color-op:#D4C4EC96;
+    --theme-color:#b89ee0;
+    --theme-color-op:#b89ee096;
     --light-theme:#f1ecf9;
     overflow-x: hidden;
     scroll-behavior: smooth;
